terraformResourceBamboo.tf
resource "aws_instance" "ec2_aec_bamboo" {
  #count = 3
  count = 0
  ami = "ami-80861296"
  instance_type = "m4.large"
  key_name = aws_key_pair.aec_key_pair.key_name
  security_groups = ["${aws_security_group.aec_sg_bamboo.name}"]
  
  provisioner "remote-exec" {
    connection {
      host = self.public_ip
      type = "ssh"
      user = "ubuntu"
      #private_key = file("~/.ssh/id_rsa")
 	  private_key = "-----BEGIN RSA PRIVATE KEY-----Proc-Type: 4,ENCRYPTEDDEK-Info: AES-128-CBC,7C20C3F5D520721C0E2038F0EE6E8A1FJvnOfa4Wi6cm5J/6RlsAjWMVeIy+P5ezo8isDkPewx5z0tGJ+fkLLz414SpxV5UWjXtroq+ErDCR4QLngtSRdz+E+w44OGJKPSWzMjJocFhMuGVpj3phjnA0PS2b2mzNSetEi0LsAH0hupDo0YJ9/64hQ+BNu6FrwY251Q7D+cCimeHQq7pINCx3el/qbWU63/NQZ4swDKoWEEVFjNYbAB5KnOWAiZFbtqSCtfN389bpXyCumwyTrLWj8IvvK4p6yuOeSNco7NZHcvYIge/a+dqigFqwGbTnx1IQ2T1GKEgLBYElpw0MESPc1K9HZM0JyCGou2oyYOd9DzUTGUobjyYkOG4zSV5WV/AU4bILhjBK+wqnEW/yQx [...]
    }
    script = "provisionBamboo.sh"
  }
  provisioner "remote-exec" {
    connection {
      host = self.public_ip
      type = "ssh"
      user = "ubuntu"
      #private_key = file("~/.ssh/id_rsa")
      private_key = "-----BEGIN RSA PRIVATE KEY-----Proc-Type: 4,ENCRYPTEDDEK-Info: AES-128-CBC,7C20C3F5D520721C0E2038F0EE6E8A1FJvnOfa4Wi6cm5J/6RlsAjWMVeIy+P5ezo8isDkPewx5z0tGJ+fkLLz414SpxV5UWjXtroq+ErDCR4QLngtSRdz+E+w44OGJKPSWzMjJocFhMuGVpj3phjnA0PS2b2mzNSetEi0LsAH0hupDo0YJ9/64hQ+BNu6FrwY251Q7D+cCimeHQq7pINCx3el/qbWU63/NQZ4swDKoWEEVFjNYbAB5KnOWAiZFbtqSCtfN389bpXyCumwyTrLWj8IvvK4p6yuOeSNco7NZHcvYIge/a+dqigFqwGbTnx1IQ2T1GKEgLBYElpw0MESPc1K9HZM0JyCGou2oyYOd9DzUTGUobjyYkOG4zSV5WV/AU4bILhjBK+wqnEW/y [...]
    }
    inline = ["sudo reboot now"]
  }
  tags = {
    Name = "Agile Engineering Class Bamboo ${format("%03d", count.index)}"
  }
}
