terraformResourceGitlab.tf
resource "aws_instance" "ec2_aec_gitlab" {
  count = var.per_student_loadout["gitlab"] * var.number_of_students
  
  ami = var.ami[var.aws_region]
  instance_type = "m4.large"  # try an m6g.medium or a t2.small for this: https://aws.amazon.com/ec2/instance-types/  https://aws.amazon.com/ec2/pricing/on-demand/
  key_name = aws_key_pair.aec_key_pair.key_name
  security_groups = ["${aws_security_group.aec_sg_gitlab.name}"]
  provisioner "remote-exec" {
    connection {
      host = self.public_ip    
      type = "ssh"
      user = "ubuntu"
      #private_key = file("~/.ssh/id_rsa")
      private_key = "-----BEGIN RSA PRIVATE KEY-----Proc-Type: 4,ENCRYPTEDDEK-Info: AES-128-CBC,7C20C3F5D520721C0E2038F0EE6E8A1FJvnOfa4Wi6cm5J/6RlsAjWMVeIy+P5ezo8isDkPewx5z0tGJ+fkLLz414SpxV5UWjXtroq+ErDCR4QLngtSRdz+E+w44OGJKPSWzMjJocFhMuGVpj3phjnA0PS2b2mzNSetEi0LsAH0hupDo0YJ9/64hQ+BNu6FrwY251Q7D+cCimeHQq7pINCx3el/qbWU63/NQZ4swDKoWEEVFjNYbAB5KnOWAiZFbtqSCtfN389bpXyCumwyTrLWj8IvvK4p6yuOeSNco7NZHcvYIge/a+dqigFqwGbTnx1IQ2T1GKEgLBYElpw0MESPc1K9HZM0JyCGou2oyYOd9DzUTGUobjyYkOG4zSV5WV/AU4bILhjBK+wqnEW/y [...]
    }
    script = "provisionGitLab.sh"
  }
  provisioner "remote-exec" {
    connection {
      host = self.public_ip
      type = "ssh"
      user = "ubuntu"
      private_key = local.private_ssh_key
      
    }
    inline = ["sudo reboot now"]
  }
  tags = {
    Name = "Agile Engineering Class GitLab ${format("%03d", count.index)}"
  }
}
